			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

  * FIXED: alignment for some platforms (Andreas Schwab).

  * PORT: Made compilation clean for GCC 4.0.  Work with Stefan Dirsch
    from SuSE preparing for the next SuSE release.

  * MODIFIED: renamed option initfile for qsave_program/2 to init_file.
    Inconsistent with the documentation and the rest of the system calls
    it init_file as well.  Mike Elston.

  * FIXED: two memory leaks in concat_atom/3.

VERSION 5.5.14 (April 18, 2005)
===============================

  * FIXED: Bug#31: Crash when asserting predicates with wide-character
    functor name (mutex-name problem).  Also fixed mutex_statistics/0
    for such predicates.  Dmitry.

  * FIXED: Do not add BOM by default when a file is opened for write with
    explicit encoding.

VERSION 5.5.13 (April 12, 2005)
===============================

  * FIXED: Sungetc() update of position->charno

  * MODIFIED: Deleted built-in operator op(500, fy, ?).  Non-standard.
    Paulo Moura.  Very infrequently used for style_check(?dollar) and
    similar queries.  Also changed for ISO compatibility:

		op(500, fx, \)  --> op(200, fy, \)
		op(500, fx, -)  --> op(200, fy, -)

  * FIXED: Win32 console lockup when writing using put_byte/1 or using
    a modified encoding.

  * FIXED: Bug#30: Sprintf() and friends format bug.  With patch from
    Koenraad Heijlen.  Thanks.

  * ADDED: Support for BOM (Byte Order Mark), detecting various UNICODE
    file formats


VERSION 5.5.12 (April 04, 2005)
===============================

  * MODIFIED: write(1.0) --> 1.0.  I.e. floats are always written with
    either a . or an 'e' inside them.  Paulo Moura.

  * ENHANCED: give error on gensym(?, +).
